--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 body {
-    font-family: Roboto;
+    font-family: Quicksand;
+    margin: 0;
 }
 
 .main {
@@ -14,6 +15,7 @@ body {
     background-color: #212121;
     color: azure;
     text-align: center;
+    text-decoration: none;
 }
 
 .subjectlinks li {
@@ -31,14 +33,9 @@ body {
 }
 
 .subjectlinks a {
-    text-decoration: none;
     font-size: x-large;
     color: azure;
     font-size: 1.2em;
-}
-
-.subjectlinks li:hover {
-    background-color: #3a3a3a;
 }
 
 .navnav {
@@ -49,7 +46,8 @@ body {
     color: azure;
 }
 
-.navnav li:hover {
+.navnav li:hover,
+.subjectlinks li:hover {
     background-color: #3a3a3a;
 }
 
@@ -57,4 +55,15 @@ body {
     background-color: rgba(88, 88, 88, 0.8);
     padding: 30px;
     color: black;
+    font-family: Roboto;
+    text-decoration: none;
+}
+
+.moreinfo a {
+    color: black;
+}
+
+.footer {
+    margin: 0%;
+    padding: 10px 0;
 }
