--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ body {
     text-align: center;
     padding: 100px;
     font-family: Quicksand;
-    background-color: #065464;
+    background-image: linear-gradient(220deg, #065464, #3cadc4);
 }
 
 .subjectlinks {
@@ -34,16 +34,14 @@ body {
 
 .subjectlinks a {
     font-size: x-large;
-    color: azure;
+    color: white;
     font-size: 1.2em;
 }
 
 .navnav {
     background-color: #212121;
-}
-
-.navnav a {
-    color: azure;
+    font-family: Roboto;
+    font-weight: 100;
 }
 
 .navnav li:hover,
@@ -52,7 +50,7 @@ body {
 }
 
 .moreinfo {
-    background-color: rgba(88, 88, 88, 0.8);
+    background-color: azure;
     padding: 30px;
     color: black;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
@@ -64,12 +62,16 @@ body {
 }
 
 .linktohw {
-    background-color: rgb(0, 0, 0);
+    background-color: black;
     padding: 100px 0;
     text-align: center;
-    color: azure;
+    color: white;
 }
 
 .linktohw h2 {
     padding-bottom: 30px;
+}
+
+.timetable {
+    background-image: linear-gradient(220deg, rgb(24, 184, 24), rgb(20, 236, 190));
 }
